added benefit section

--- a/index.html
+++ b/index.html
@@ -212,6 +212,42 @@
     </div>
 </section>
 
+<!-- Program Benefits -->
+<section class="py-5 bg-light fade-in">
+    <div class="container">
+        <h2 class="text-center mb-5">Apa yang Anda Dapatkan?</h2>
+        <div class="row g-4">
+            <div class="col-md-4 text-center">
+                <div class="card h-100 border-0">
+                    <div class="card-body">
+                        <i class="fas fa-utensils fa-3x text-accent2 mb-3"></i>
+                        <h5>Meal Plan Personal</h5>
+                        <p>Panduan makan sesuai kebutuhan kalori dan preferensi makanan</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 text-center">
+                <div class="card h-100 border-0">
+                    <div class="card-body">
+                        <i class="fas fa-dumbbell fa-3x text-accent2 mb-3"></i>
+                        <h5>Work Plan</h5>
+                        <p>Video tutorial workout dan jadwal latihan terprogram</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 text-center">
+                <div class="card h-100 border-0">
+                    <div class="card-body">
+                        <i class="fas fa-headset fa-3x text-accent2 mb-3"></i>
+                        <h5>Support 24/7</h5>
+                        <p>Konsultasi langsung dengan coach melalui WhatsApp</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 <!-- Testimoni Section -->
 <section id="testimoni" class="py-5 fade-in">
