--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     <div class="card-body">
                         <i class="fas fa-dumbbell fa-3x text-accent2 mb-3"></i>
                         <h5>Work Plan</h5>
-                        <p>Video tutorial workout dan jadwal latihan terprogram</p>
+                        <p>Workout dan jadwal latihan terprogram</p>
                     </div>
                 </div>
             </div>
