--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <div class="mt-4">
             <a href="https://www.instagram.com/dokteranna/" class="text-dark social-icon"><i class="fab fa-instagram"></i></a>
             <a href="https://www.tiktok.com/@dokteranna" class="text-dark social-icon"><i class="fab fa-tiktok"></i></a>
-            <a href="#" class="text-dark social-icon"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.facebook.com/share/15ZXkB3kvo/?mibextid=wwXIfr" class="text-dark social-icon"><i class="fab fa-facebook"></i></a>
         </div>
     </div>
 </section>
@@ -292,7 +292,7 @@
         <div class="mb-4">
             <a href="https://www.instagram.com/dokteranna/" class="text-white social-icon"><i class="fab fa-instagram"></i></a>
             <a href="https://www.tiktok.com/@dokteranna" class="text-white social-icon"><i class="fab fa-tiktok"></i></a>
-            <a href="#" class="text-white social-icon"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.facebook.com/share/15ZXkB3kvo/?mibextid=wwXIfr" class="text-white social-icon"><i class="fab fa-facebook"></i></a>
         </div>
         <p>&copy; 2025 Body Revolution. All rights reserved.</p>
     </div>
